chore: Repository cleanup and reorganization
Major cleanup and modernization of the OpenMOVR repository structure:

Infrastructure Improvements:
- Created shared header component system with header-loader.js
- Updated index.html and gsoc.html to use shared header component
- Added comprehensive developer documentation page (docs/developer.html)
- Created .github/CODEOWNERS for code ownership management
- Updated CONTRIBUTING.md and BRANCH_STRATEGY.md

Renamed Data Dictionary Viewer:
- Renamed data-dictionary-viewer/ to movr-viewer/
- Updated all internal references and links
- Updated Python processing scripts with relative paths
- Added OpenMOVR header navigation to all viewer pages

Documentation Updates:
- Created docs/developer.html with technical documentation
- Updated email contacts throughout (andre.paredes@ymail.com for technical)
- Updated navigation links to use movr-viewer path
- Improved README and contribution guidelines

Code Quality:
- Removed redundant header HTML duplication
- Centralized header component in components/header.html
- Cleaned up navigation structure
- Updated CODEOWNERS with proper team assignments

This commit represents a clean baseline for future development.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,7 +17,7 @@
 
 # MOVR Viewer Applications (Data Dictionary, Vendor Mapping)
 # These are research tools requiring domain knowledge
-/data-dictionary-viewer/ @ADParedes @OpenMOVR/data-team
+/movr-viewer/ @ADParedes @OpenMOVR/data-team
 
 # Pilot Program (enrollment, forms, integrations)
 # Requires careful review due to PHI/PII handling
